force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/WC_Questionnaire_Industry_Specific__c.object-meta.xml
<CustomObject>
    <description>this to hold industry specific questions</description>
    <label>WC Questionnaire Industry Specific</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>WC Questionnaire industry Specific Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WC Questionnaire Industry Specific</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>