force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Additional_controls_PPE_Tests_for_emps__c.field-meta.xml
<CustomField>
    <fullName>Additional_controls_PPE_Tests_for_emps__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional controls/PPE/Tests for emps</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>