force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Address_for_each_Employee__c.field-meta.xml
<CustomField>
    <fullName>Address_for_each_Employee__c</fullName>
    <description>Please provide the address for each, and the number of employees working at each site</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address for each Employee</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>