force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Addtnl_ctrls_gst_clng_rooms__c.field-meta.xml
<CustomField>
    <fullName>Addtnl_ctrls_gst_clng_rooms__c</fullName>
    <label>Addtnl ctrls gst clng rooms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>