force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Addtnl_ctrls_in_place_delivery__c.field-meta.xml
<CustomField>
    <fullName>Addtnl_ctrls_in_place_delivery__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Addtnl ctrls in place delivery</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>