force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Allows_firearms_weapons_on_premisis__c.field-meta.xml
<CustomField>
    <fullName>Allows_firearms_weapons_on_premisis__c</fullName>
    <description>Do you allow any firearms or other weapons on premises?</description>
    <label>Allows firearms/weapons on premisis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>