force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Any_emp_ride_on_back_of_trucks__c.field-meta.xml
<CustomField>
    <fullName>Any_emp_ride_on_back_of_trucks__c</fullName>
    <description>Do any of your employees ever ride in the back of trucks?</description>
    <label>Any emp ride on back of trucks?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>