force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Any_precautions_when_aide_visits_client__c.field-meta.xml
<CustomField>
    <fullName>Any_precautions_when_aide_visits_client__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please provide the safety precautions, procedures that are in place for when an aide visits a client</inlineHelpText>
    <label>Any precautions when aide visits client</label>
    <length>50</length>
    <type>Text</type>
</CustomField>