force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Any_seawall_work__c.field-meta.xml
<CustomField>
    <fullName>Any_seawall_work__c</fullName>
    <description>Any seawall work?</description>
    <label>Any seawall work?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>