force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Are_COIs_obtained_and_maintained__c.field-meta.xml
<CustomField>
    <fullName>Are_COIs_obtained_and_maintained__c</fullName>
    <label>Are COIs obtained and maintained?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>