force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Are_employees_trained_before_using_equip__c.field-meta.xml
<CustomField>
    <fullName>Are_employees_trained_before_using_equip__c</fullName>
    <description>Are employees trained before using equipment?</description>
    <label>Are employees trained before using equip</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>