force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/CAL_OSHA_visited_or_cited_bus_past_3_yrs__c.field-meta.xml
<CustomField>
    <fullName>CAL_OSHA_visited_or_cited_bus_past_3_yrs__c</fullName>
    <description>Has CAL/OSHA visited or cited the business in the last 3 years?</description>
    <label>CAL/OSHA visited or cited bus past 3 yrs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>