force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Do_any_employees_live_on_site__c.field-meta.xml
<CustomField>
    <fullName>Do_any_employees_live_on_site__c</fullName>
    <description>Do any employees live on site?</description>
    <label>Do any employees live on site?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>