force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Do_they_see_any_exotic_animals__c.field-meta.xml
<CustomField>
    <fullName>Do_they_see_any_exotic_animals__c</fullName>
    <description>Do they see any exotic animals?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Do they see any exotic animals?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>