force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Do_you_do_any_engine_rebuilding__c.field-meta.xml
<CustomField>
    <fullName>Do_you_do_any_engine_rebuilding__c</fullName>
    <description>Do you do any engine rebuilding?</description>
    <label>Do you do any engine rebuilding?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>