force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Do_you_have_any_panic_alarms_installed__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_panic_alarms_installed__c</fullName>
    <description>Do you have any panic alarms installed?</description>
    <label>Do you have any panic alarms installed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>