force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Do_you_have_safety_deposit_boxes__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_safety_deposit_boxes__c</fullName>
    <description>Do you have safety deposit boxes?</description>
    <label>Do you have safety deposit boxes?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>