force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Do_you_perform_landscape_and_lawn_maint__c.field-meta.xml
<CustomField>
    <fullName>Do_you_perform_landscape_and_lawn_maint__c</fullName>
    <description>Do you perform landscape and lawn maintenance?</description>
    <label>Do you perform landscape and lawn maint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>