force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Do_you_provide_services_in_hospitals__c.field-meta.xml
<CustomField>
    <fullName>Do_you_provide_services_in_hospitals__c</fullName>
    <label>Do you provide services in hospitals?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>