force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Do_you_sell_gasoline__c.field-meta.xml
<CustomField>
    <fullName>Do_you_sell_gasoline__c</fullName>
    <description>Do you sell gasoline?</description>
    <label>Do you sell gasoline?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>