force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Dressmaking_or_tailoring_high_volume__c.field-meta.xml
<CustomField>
    <fullName>Dressmaking_or_tailoring_high_volume__c</fullName>
    <description>Dressmaking or Tailoring-custom work exclusively, high volume, mass production.</description>
    <label>Dressmaking or tailoring high volume</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>