force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Drive_mechanism_interlocks__c.field-meta.xml
<CustomField>
    <fullName>Drive_mechanism_interlocks__c</fullName>
    <description>Drive mechanism interlocks?</description>
    <label>Drive mechanism interlocks?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>