force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Employs_trainees_or_apprentices__c.field-meta.xml
<CustomField>
    <fullName>Employs_trainees_or_apprentices__c</fullName>
    <description>Do you employ any trainees or apprentices?</description>
    <label>Employs trainees or apprentices?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>