force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Equipment_inspected_regularly__c.field-meta.xml
<CustomField>
    <fullName>Equipment_inspected_regularly__c</fullName>
    <description>Equipment inspected regularly?</description>
    <label>Equipment inspected regularly?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>