force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Gas_tire_cage_is_utiilized__c.field-meta.xml
<CustomField>
    <fullName>Gas_tire_cage_is_utiilized__c</fullName>
    <description>Is tire cage utilized?</description>
    <label>Gas tire cage is utiilized?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>