force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Golf_has_full_safety_program__c.field-meta.xml
<CustomField>
    <fullName>Golf_has_full_safety_program__c</fullName>
    <description>Do you have a full Safety Program?</description>
    <label>Do you have a full Safety Program?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>