force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/How_many_employees__c.field-meta.xml
<CustomField>
    <fullName>How_many_employees__c</fullName>
    <label>How many employees?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>