force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/How_many_volunteers__c.field-meta.xml
<CustomField>
    <fullName>How_many_volunteers__c</fullName>
    <description>How many volunteers?</description>
    <label>How many volunteers?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>