force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/if_yes_are_there_multiple_care_givers__c.field-meta.xml
<CustomField>
    <fullName>if_yes_are_there_multiple_care_givers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>if yes, are there multiple care givers?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>