force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/if_yes_do_you_monitor_motor_vehicle__c.field-meta.xml
<CustomField>
    <fullName>if_yes_do_you_monitor_motor_vehicle__c</fullName>
    <label>if yes, do you monitor motor vehicle?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>