force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/if_yes_how_many__c.field-meta.xml
<CustomField>
    <fullName>if_yes_how_many__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>if yes, how many?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>