force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/if_yes_please_describe_the_mfg_process__c.field-meta.xml
<CustomField>
    <fullName>if_yes_please_describe_the_mfg_process__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>if yes, please describe the mfg process</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>