force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/if_yes_what_are_the_typical_shift_hrs__c.field-meta.xml
<CustomField>
    <fullName>if_yes_what_are_the_typical_shift_hrs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>if yes, what are the typical shift hrs?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>