force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Is_PPE_required_to_be_worn__c.field-meta.xml
<CustomField>
    <fullName>Is_PPE_required_to_be_worn__c</fullName>
    <description>Are they required to be worn?</description>
    <label>Is PPE required to be worn?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>