force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Is_there_a_drive_thru__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_drive_thru__c</fullName>
    <label>Is there a drive-thru?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>