force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Jewlery_gaurds_Armed_or_unarmed__c.field-meta.xml
<CustomField>
    <fullName>Jewlery_gaurds_Armed_or_unarmed__c</fullName>
    <description>Armed or unarmed?</description>
    <label>Armed or unarmed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Armed</fullName>
            </value>
            <value>
                <fullName>unarmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>