force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Max_emp_count_allowed_in_vehicle__c.field-meta.xml
<CustomField>
    <fullName>Max_emp_count_allowed_in_vehicle__c</fullName>
    <description>What is the max # of employees allowed per vehicle?</description>
    <label>Max emp count allowed in vehicle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>