force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/No_of_patients_caregivers_visit_in_24hr__c.field-meta.xml
<CustomField>
    <fullName>No_of_patients_caregivers_visit_in_24hr__c</fullName>
    <label>No. of patients caregivers visit in 24hr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>