force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Number_of_field_trips_per_year__c.field-meta.xml
<CustomField>
    <fullName>Number_of_field_trips_per_year__c</fullName>
    <description>Please provide an avg of how many per year?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of field trips per year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>