force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Offer_bnfits_to_drvrs_clsfied_as_1099s__c.field-meta.xml
<CustomField>
    <fullName>Offer_bnfits_to_drvrs_clsfied_as_1099s__c</fullName>
    <label>Offer bnfits to drvrs clsfied as 1099s</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>