force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Peo_IndSpecific_formStatus__c.field-meta.xml
<CustomField>
    <fullName>Peo_IndSpecific_formStatus__c</fullName>
    <label>Peo_IndSpecific_formStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Questionnaire_Status</valueSetName>
    </valueSet>
</CustomField>