force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Peo_IndSpecific_formSubmissionTime__c.field-meta.xml
<CustomField>
    <fullName>Peo_IndSpecific_formSubmissionTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Peo_IndSpecific_formSubmissionTime</label>
    <type>DateTime</type>
</CustomField>