force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/PEO_Underwriting_Checklist__c.field-meta.xml
<CustomField>
    <fullName>PEO_Underwriting_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PEO Underwriting Checklist</label>
    <referenceTo>PEO_Onboarding_Checklist__c</referenceTo>
    <relationshipLabel>WC Questionnaire Industry Specific</relationshipLabel>
    <relationshipName>WC_Questionnaire_Industry_Specific</relationshipName>
    <type>Lookup</type>
</CustomField>