force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Percent_of_landscape_design_work__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_landscape_design_work__c</fullName>
    <description>Percent of landscape design work</description>
    <label>Percent of landscape design work</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>