force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Percentage_of_riding_mowers__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_riding_mowers__c</fullName>
    <description>Percentage of riding mowers</description>
    <label>Percentage of riding mowers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>