force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Percentage_of_subcontracted_work__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_subcontracted_work__c</fullName>
    <description>Percentage of subcontracted work</description>
    <label>Percentage of subcontracted work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>