force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Percentage_of_tree_work_done__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_tree_work_done__c</fullName>
    <description>What is the % of your work attributable to this?</description>
    <label>Percentage of tree work done</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>