force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Security_personal_provided_on_premises__c.field-meta.xml
<CustomField>
    <fullName>Security_personal_provided_on_premises__c</fullName>
    <description>Do you provide security personnel at any of the properties?</description>
    <label>Security personal provided on premises</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>