force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Type_of_equipment_used_include_heavy__c.field-meta.xml
<CustomField>
    <fullName>Type_of_equipment_used_include_heavy__c</fullName>
    <description>What type of equipment is used, including heavy equipment?  e.g. Ladder, scaffolding, scissor lifts, booms, cranes,  etc.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type of equipment used include heavy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>