force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Uses_Tire_cage_for_heavy_truck_tires__c.field-meta.xml
<CustomField>
    <fullName>Uses_Tire_cage_for_heavy_truck_tires__c</fullName>
    <description>Is tire cage utilized?</description>
    <label>Uses Tire cage for heavy truck tires</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>