force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/What_is_the_age_range_of_the_clients__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_age_range_of_the_clients__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please include the (min and max) age range of your clients/patients using hyphen</inlineHelpText>
    <label>What is the age range of the clients?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>