force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/what_is_the_maximum_weight__c.field-meta.xml
<CustomField>
    <fullName>what_is_the_maximum_weight__c</fullName>
    <description>What is the maximum weight?</description>
    <label>What is the maximum weight?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>