force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/What_percentage_of_work_is_new__c.field-meta.xml
<CustomField>
    <fullName>What_percentage_of_work_is_new__c</fullName>
    <description>What percentage of work is new (___%)?</description>
    <label>What percentage of work is new?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>