force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/What_specific_job_duties__c.field-meta.xml
<CustomField>
    <fullName>What_specific_job_duties__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What specific job duties?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>