force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/fields/Which_ones_do_you_use_most_often__c.field-meta.xml
<CustomField>
    <fullName>Which_ones_do_you_use_most_often__c</fullName>
    <description>Which ones do you use most often?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Which ones do you use most often?</label>
    <type>TextArea</type>
</CustomField>