force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Assisted_Living_Facility.recordType-meta.xml
<RecordType>
    <fullName>Assisted_Living_Facility</fullName>
    <active>true</active>
    <description>Assisted Living Facility</description>
    <label>Assisted Living Facility</label>
</RecordType>