force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Auto_Dealership.recordType-meta.xml
<RecordType>
    <fullName>Auto_Dealership</fullName>
    <active>true</active>
    <description>Auto Dealership</description>
    <label>Auto Dealership</label>
</RecordType>