force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Auto_Service_Repair_Autobody_Collision_Paint_Shop.recordType-meta.xml
<RecordType>
    <fullName>Auto_Service_Repair_Autobody_Collision_Paint_Shop</fullName>
    <active>true</active>
    <description>Auto Service/Repair/Autobody Collision/Paint Shop</description>
    <label>Auto Service/Repair/Autobody Collision/Paint Shop</label>
</RecordType>