force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Auto_Truck_Rental.recordType-meta.xml
<RecordType>
    <fullName>Auto_Truck_Rental</fullName>
    <active>true</active>
    <description>Auto/Truck Rental</description>
    <label>Auto/Truck Rental</label>
</RecordType>