force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Banks.recordType-meta.xml
<RecordType>
    <fullName>Banks</fullName>
    <active>true</active>
    <label>Banks</label>
</RecordType>