force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Commercial_Janitorial_Services.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Janitorial_Services</fullName>
    <active>true</active>
    <label>Commercial Janitorial Services</label>
</RecordType>