force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Contractors_Construction_Service_Traders_including_Plumbing_HVAC_Electrician.recordType-meta.xml
<RecordType>
    <fullName>Contractors_Construction_Service_Traders_including_Plumbing_HVAC_Electrician</fullName>
    <active>true</active>
    <description>Contractors/Construction/Service Traders including Plumbing/HVAC/Electrician</description>
    <label>Contractors/Construction/Service Traders including Plumbing/HVAC/Electrician</label>
</RecordType>