force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Delivery_Trucking_exposure.recordType-meta.xml
<RecordType>
    <fullName>Delivery_Trucking_exposure</fullName>
    <active>true</active>
    <description>Delivery Trucking exposure</description>
    <label>Delivery Trucking exposure</label>
</RecordType>