force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Doctors_Offices.recordType-meta.xml
<RecordType>
    <fullName>Doctors_Offices</fullName>
    <active>true</active>
    <label>Doctor&apos;s Offices</label>
</RecordType>