force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Fencing_Contractors.recordType-meta.xml
<RecordType>
    <fullName>Fencing_Contractors</fullName>
    <active>true</active>
    <description>Fencing Contractors</description>
    <label>Fencing Contractors</label>
</RecordType>