force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Furniture.recordType-meta.xml
<RecordType>
    <fullName>Furniture</fullName>
    <active>true</active>
    <description>Furniture</description>
    <label>Furniture</label>
</RecordType>