force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Garment_Industry.recordType-meta.xml
<RecordType>
    <fullName>Garment_Industry</fullName>
    <active>true</active>
    <description>Garment Industry</description>
    <label>Garment Industry</label>
</RecordType>