force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Gas_Stations_with_convenience_Stores_or_Grocery_Stores.recordType-meta.xml
<RecordType>
    <fullName>Gas_Stations_with_convenience_Stores_or_Grocery_Stores</fullName>
    <active>true</active>
    <description>Gas Stations with Convenience Stores or Grocery Stores</description>
    <label>Gas Stations with convenience Stores or Grocery Stores</label>
</RecordType>