force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Golf_Country_Club.recordType-meta.xml
<RecordType>
    <fullName>Golf_Country_Club</fullName>
    <active>true</active>
    <description>Golf/Country Club</description>
    <label>Golf/Country Club</label>
</RecordType>