force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Home_Health.recordType-meta.xml
<RecordType>
    <fullName>Home_Health</fullName>
    <active>true</active>
    <label>Home Health</label>
</RecordType>