force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Hotels.recordType-meta.xml
<RecordType>
    <fullName>Hotels</fullName>
    <active>true</active>
    <label>Hotels</label>
</RecordType>