force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Jewelry_Store.recordType-meta.xml
<RecordType>
    <fullName>Jewelry_Store</fullName>
    <active>true</active>
    <description>Jewelry Store</description>
    <label>Jewelry Store</label>
</RecordType>