force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Landscapers.recordType-meta.xml
<RecordType>
    <fullName>Landscapers</fullName>
    <active>true</active>
    <description>Landscapers</description>
    <label>Landscapers</label>
</RecordType>