force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Marinas.recordType-meta.xml
<RecordType>
    <fullName>Marinas</fullName>
    <active>true</active>
    <description>Marinas</description>
    <label>Marinas</label>
</RecordType>