force-app/main/default/objects/WC_Questionnaire_Industry_Specific__c/recordTypes/Moving_Companies.recordType-meta.xml
<RecordType>
    <fullName>Moving_Companies</fullName>
    <active>true</active>
    <description>Moving Companies</description>
    <label>Moving Companies</label>
</RecordType>